# sturdiws

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  dependencies.sh  pyproject.toml
config/: gps_l1ca_rcvr.yaml  ifen_rcvr.yaml  nordnav_rcvr.yaml  thesis_sim_rcvr.yaml  thesis_sim_rcvr_array.yaml  usrp_rcvr.yaml  vt_correlator_sim.yaml  vt_signal_sim.yaml
scripts/: run_correlator_sim.cpp  run_sturdr.py  sim_common.hpp  sturdr_gui.py  test.py  usrp_data.py
scripts/correlator_sim/: correlator_model.py  mc_results.py  models.py  parsers.py  plotters.py  results.py  sim.py  vt.py  vt_new.py
scripts/signal_sim/: mc_results.py  results.py  signals.py  sim.py  test.py
scripts/thesis_plots/: calc_mc_stats.py  calc_mc_var.py  dop_stats.py  live_sky.py  me_vs_music.py  me_vs_vdfll.py  sig_vs_corr.py  signal_vs_corr.py
scripts/utils/: parsers.py  plotters.py
